--- a/Preprocessing.Rmd
+++ b/Preprocessing.Rmd
@@ -36,29 +36,6 @@ sample_annotations <- data.frame(sample_name = colnames(data))
 
 # 2. Mad histograms
 ```{r}
-filter_str <- function(data, expr, ...) {
-  filter(data, eval(rlang::parse_expr(expr)), ...)
-}
-flt <- "CODING & !RPLS & mad_gt_0"
-```
-
-```{r}
-plotMadHistograms <- function(gene_annotations) {
-  plt1 <- ggplot(gene_annotations, aes(x = log2(mad + 1), color = mad_gt_0)) +
-    geom_histogram(bins = 100, fill = 'white') +
-    theme_minimal()
-  
-  plt2 <- gene_annotations %>%
-    filter_str(flt) %>%
-    ggplot(aes(x = log2(mad + 1), color = as.factor(mad_gt_1 + mad_gt_2))) +
-      geom_histogram(bins = 100, fill = 'white') +
-      theme_minimal()
-  
-  grid.arrange(plt1, plt2)
-}
-```
-
-```{r}
 plotMadHistograms(gene_annotations)
 ```
 
@@ -66,6 +43,7 @@ plotMadHistograms(gene_annotations)
 
 Filtering condition:
 ```{r}
+flt <- "CODING & !RPLS & mad_gt_0"
 flt
 ```
 
@@ -230,69 +208,26 @@ plotPointsColored(lo2_6)
 ```
 
 ```{r}
-lo2 <- init_tmp_lo2(data_7, preprocessing_cell_types, dataset_name)
-lo2$getSvdProjectionsNew()
-lo2$selectInitX()
-plotPointsColored(lo2)
+lo2_7 <- init_tmp_lo2(data_7, preprocessing_cell_types, dataset_name)
+lo2_7$getSvdProjectionsNew()
+lo2_7$selectInitX()
+plotPointsColored(lo2_7)
 ```
 
 
 # 9. Fit LinSeed2
-```{r}
-fit_lo2 <- function(data, cell_types) {
-  lo2 <- init_tmp_lo2(data, cell_types, dataset_name)
-  lo2$getSvdProjectionsNew()
-  lo2$selectInitX()
-  run_block(lo2, iterations = 15000)
-  show(plotErrors(lo2))
-  show(plotPoints2D(lo2))
-  show(plotSumToOneChange(lo2))
-  show(plotNegProportionsChange(lo2))
-  show(plotNegBasisChange(lo2))
-  show(plotAbundance(lo2))
-  lo2
-}
-```
 
 ## 3 cell types
 ```{r}
-lo2_7_3ct <- fit_lo2(data_7, 3)
+lo2_7_3ct <- fit_lo2(data_7, 3, dataset_name)
 ```
 
 ```{r}
-lo2_6_3ct <- fit_lo2(data_6, 3)
+lo2_6_3ct <- fit_lo2(data_6, 3, dataset_name)
 ```
 
 ## Results
 ```{r}
-get_basis_column <- function(lo2) {
-  ct_names <- paste0("Cell_type_", 1:lo2$cell_types)
-  colnames(lo2$full_basis) <- ct_names
-  rownames(lo2$full_proportions) <- ct_names
-  toSave <- t(t(lo2$full_basis) / rowSums(t(lo2$full_basis)))
-  toSave <- lo2$getFoldChange(toSave)
-  toSave <- rbind(c(rep(NA,lo2$cell_types), round(apply(lo2$full_proportions,1,mean),4)),toSave)
-  rownames(toSave) <- c("avg_proportions",rownames(lo2$filtered_dataset))
-  toSave
-}
-
-get_cell_type_markers <- function(lo2, top_genes) {
-  cell_types <- lo2$cell_types
-  basis_column <- get_basis_column(lo2)
-  basis_ <- data.frame(basis_column)
-  basis_$gene <- rownames(basis_)
-  basis_ <- basis_[-1,]
-  genesList <- data.frame(genes=rep(" ", cell_types))
-  rownames(genesList) <- paste0("Cell_type_", 1:cell_types)
-
-  for (ct in 1:cell_types) {
-    row_name <- paste0("Cell_type_", ct)
-    genes <- (basis_ %>% arrange(desc(.data[[row_name]])))[1:top_genes, "gene"]
-    genesList[row_name, "genes"] <- paste0(genes, collapse = " ")
-  }
-  genesList
-}
-
 markers_6_3ct <- get_cell_type_markers(lo2_6_3ct, 30)
 markers_7_3ct <- get_cell_type_markers(lo2_6_3ct, 30)
 ```
